# w3c-vc-barcodes

./: Cargo.toml  README.md
examples/: sign.rs  verify.rs
src/: aamva_dlid.rs  aamva_pdf417.rs  ecdsa_xi_2023.rs  lib.rs  mrz.rs  optical_barcode_credential.rs  terse_bitstring_status_list_entry.rs
src/aamva/: dlid.rs  mod.rs
src/aamva/dlid/: dl.rs  id.rs  macros.rs  mod.rs  pdf_417.rs  types.rs
src/optical_barcode_credential/: aamva.rs  mod.rs  signature.rs  verification.rs
src/optical_barcode_credential/compression/: decoding.rs  encoding.rs  mod.rs
src/optical_barcode_credential/contexts/: mod.rs  utopia_v2.jsonld
tests/: aamva.rs  common.rs  mrz.rs
tests/aamva/: configuration.jsonld  secured.jsonld  unsecured.jsonld
tests/mrz/: configuration.jsonld
