[package]
name = "w3c-vc-barcodes"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
iref = { version = "3.1.4", features = ["serde"] }
static-iref = "3.0.0"
lazy_static = "1.5.0"
serde = { version = "1.0.203", features = ["derive"] }
sha2 = "0.10.8"
ssi = { git = "https://github.com/spruceid/ssi.git", rev = "88110a9", features = ["secp256r1", "secp384r1"] }
json-syntax = "0.12.5"
cbor-ld = { git = "https://github.com/spruceid/cbor-ld.git", rev = "74a439a" }
thiserror = "1.0.61"
csv = "1.3.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
hex = "0.4.3"
qrcode = "0.14.1"